fix(FilterBar): fix header overflow behavior & add "Go" button aria description (#8643)
Closes https://github.com/UI5/webcomponents-react/issues/8632

--- a/packages/main/src/components/FilterBar/FilterBar.module.css
+++ b/packages/main/src/components/FilterBar/FilterBar.module.css
@@ -93,11 +93,18 @@
 }
 
 .toolbar {
-  & > :not(ui5-toolbar) {
-    flex-shrink: 0;
+  & > :not([ui5-toolbar]) {
+    flex: 1 0 auto;
+    max-width: calc(
+      100% -
+        calc(var(--_ui5_button_base_min_width) + var(--_ui5-toolbar-padding-left) + var(--_ui5-toolbar-padding-right))
+    );
   }
 }
 
 .wcToolbar {
   border: none;
+  min-width: calc(
+    var(--_ui5_button_base_min_width) + var(--_ui5-toolbar-padding-left) + var(--_ui5-toolbar-padding-right)
+  );
 }
